# docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Server for uniswap transactions operations",
+        "description": "Server for uniswap transactions operations.",
         "title": "Uniswap Transaction Tracker",
         "contact": {
             "name": "Alvin Chee",
@@ -13,6 +13,44 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
+        "/swap": {
+            "get": {
+                "description": "returns uniswap swap price with corresponding transaction hash",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "accounts"
+                ],
+                "summary": "returns uniswap swap price with corresponding transaction hash",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Transaction hash",
+                        "name": "txn_hash",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.SwapResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/errors.ServerError"
+                        }
+                    }
+                }
+            }
+        },
         "/transaction/fee": {
             "get": {
                 "description": "returns transaction fee of transaction with corresponding transaction hash",
@@ -39,7 +77,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.TxnFeeResp"
+                            "$ref": "#/definitions/model.TxnFeeResp"
                         }
                     },
                     "500": {
@@ -67,13 +105,6 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Address",
-                        "name": "address",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
                         "description": "Start Time in ISO 8601 format",
                         "name": "start_time",
                         "in": "query",
@@ -91,7 +122,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.TxnsResp"
+                            "$ref": "#/definitions/model.TxnsResp"
                         }
                     },
                     "400": {
@@ -127,7 +158,52 @@
                 }
             }
         },
-        "response.Txn": {
+        "model.SwapEventWithToken": {
+            "type": "object",
+            "properties": {
+                "from": {
+                    "type": "string"
+                },
+                "sqrtPriceX96": {
+                    "type": "string"
+                },
+                "to": {
+                    "type": "string"
+                },
+                "tokenDecimal": {
+                    "type": "string"
+                },
+                "tokenName": {
+                    "type": "string"
+                },
+                "tokenSymbol": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.SwapPrice": {
+            "type": "object",
+            "properties": {
+                "price": {
+                    "type": "string"
+                },
+                "swap_event": {
+                    "$ref": "#/definitions/model.SwapEventWithToken"
+                }
+            }
+        },
+        "model.SwapResponse": {
+            "type": "object",
+            "properties": {
+                "swap_prices": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.SwapPrice"
+                    }
+                }
+            }
+        },
+        "model.Txn": {
             "type": "object",
             "properties": {
                 "blockHash": {
@@ -144,6 +220,9 @@
                 },
                 "cumulativeGasUsed": {
                     "type": "string"
+                },
+                "ethprice": {
+                    "type": "number"
                 },
                 "from": {
                     "type": "string"
@@ -189,22 +268,28 @@
                 }
             }
         },
-        "response.TxnFeeResp": {
+        "model.TxnFeeResp": {
             "type": "object",
             "properties": {
                 "transactionFee": {
-                    "type": "string"
+                    "type": "number"
                 }
             }
         },
-        "response.TxnsResp": {
+        "model.TxnsResp": {
             "type": "object",
             "properties": {
-                "transactions": {
+                "message": {
+                    "type": "string"
+                },
+                "result": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/response.Txn"
+                        "$ref": "#/definitions/model.Txn"
                     }
+                },
+                "status": {
+                    "type": "string"
                 }
             }
         }
